# leaderboard-generics

./: Cargo.toml  TODO.md  index.html
elo-lbo/: Cargo.toml
elo-lbo/src/: leaderboardset.rs  lib.rs  main.rs  sourceset.rs  user_impl.rs
elo-lbo/src/user_impl/: filters.rs  leaderboards.rs  metadata.rs  metrics.rs  performance.rs  sources.rs
lbo/src/: exporter.rs  filter.rs  lib.rs  message.rs  performances.rs  scoring.rs  sources.rs  user_impl.rs
lbo/src/user_impl/: filters.rs  leaderboards.rs  metadata.rs  sources.rs
live-elo/: Cargo.toml
live-elo/src/: exporter.rs  filter.rs  leaderboards.rs  lib.rs  main.rs  performances.rs  scoring.rs  sources.rs
live-elo/src/exporter/: elo_calculator.rs  shared_processor.rs  websocket.rs
live-elo/src/sources/: twitch.rs
live-middleman/: Cargo.toml
live-middleman/src/: main.rs
src/: lib.rs  main.rs
src/user_impl/: filters.rs  metrics.rs  sources.rs
